Ensure Chrome runs in headless mode and update workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm install
 
     - name: Install Puppeteer dependencies
-      run: sudo apt-get install -y libnss3 lsof
+      run: sudo apt-get install -y libnss3 libatk-bridge2.0-0 libxcomposite1 libxrandr2 lsof
 
     - name: Run tests
       run: npm test
@@ -39,6 +39,6 @@ jobs:
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/shadowOkage-patch-1'
       run: |
         npm install -g angular-cli-ghpages
-        ngh --dir=dist/TEV_code
+        ngh --dir=dist/TEV
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
